fix: menu gap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@ mat-sidenav-content {
 .app-menu {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 8px;
 }
 
 .app-menu button {
